--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,22 @@
 doctype html
 html
     head
+        link(href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css", rel="stylesheet")
+        link(href="index.css", rel="stylesheet")
         script(src="//code.jquery.com/jquery-2.1.3.min.js")
+        script(src="//cdn.socket.io/socket.io-1.2.1.js")
         script(src="index.js")
     body
+        .page
+            .content
+                ul.list-unstyled.lines
+                    li test
+            .input
+
+        .popup
+            form
+                .form-group
+                    label
+                        h4 Enter a name
+                    input.form-control(type="text", placeholder="Name")
+                button.btn.btn-success(type="button") Go
