Added basic socket connection

--- a/views/index.jade
+++ b/views/index.jade
@@ -10,8 +10,7 @@ html
         .page
             .content
                 ul.list-unstyled.lines
-                    li test
-            .input
+            .input(contenteditable="true")
 
         .popup
             form
